# legacy-llm-gateway-poc

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  worker.py
backend/app/api/routes/: admin.py  auth.py  chat.py  health.py  jobs.py  legacy.py  metrics.py  ws.py
backend/app/audit/: db_models.py  models.py  store.py
backend/app/auth/: dependencies.py  jwt.py  models.py  users.py
backend/app/cache/: keys.py  redis_cache.py
backend/app/core/: config.py  database.py  metrics.py  middleware.py
backend/app/jobs/: models.py  service.py
backend/app/legacy/: base.py  client.py  context.py  models.py
backend/app/providers/: base.py  dependencies.py  ollama.py
backend/app/tasks/: chat.py
backend/tests/: conftest.py  test_auth_rbac_audit.py  test_chat.py  test_jobs.py  test_legacy_context.py  test_system.py  test_websocket.py
legacy-mock-service/: Dockerfile  build.gradle  settings.gradle
legacy-mock-service/src/main/java/com/example/legacymock/: LegacyMockServiceApplication.java
legacy-mock-service/src/main/java/com/example/legacymock/connector/: LegacyConnector.java  MockErpConnector.java  MockGroupwareConnector.java  MockPdmConnector.java
monitoring/grafana/dashboards/: llm-gateway-overview.json
monitoring/grafana/provisioning/dashboards/: llm-gateway.yml
monitoring/prometheus/: prometheus.yml
postman/: llm-gateway.local.postman_environment.json  llm-gateway.postman_collection.json
(+13 files in other folders)
