[project]
name = "llm-gateway"
version = "0.1.0"
description = "Legacy integrated LLM Gateway PoC"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "redis>=5.0",
  "celery>=5.4",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "prometheus-client>=0.20",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.6"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
